[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hex2bin"
version = "2.0.0"
description = "Converts Intel HEX and Motorola S-record files to binary"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "bincopy",
    "crcmod",
]
keywords = ["hex2bin", "mot2bin", "intel-hex", "srec", "motorola", "binary", "firmware", "embedded"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

[project.scripts]
hex2bin = "hex2bin:hex2bin_main"
mot2bin = "hex2bin:mot2bin_main"

[tool.hatch.build.targets.wheel]
include = ["hex2bin.py"]

[tool.hatch.build.targets.sdist]
include = [
    "hex2bin.py",
    "README.md",
    "LICENSE",
    "src/",
    "doc/",
]
